Fix Text that does not wrap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,6 @@
-
-
 /* main-image */
 .main-image > img {
   width: 100%;
-  height: 100%;
   margin-bottom: -2px;
 }
 
@@ -13,37 +10,53 @@
 .blue-linebox {
   background-color: rgb(51,189,209);
   background-image: repeating-linear-gradient(45deg,rgb(49,182,198), rgb(49,182,198) 3px,transparent 0, transparent 6px);
+  padding: 100px 0;
 }
 
 .box {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
 
 .content-title {
-  text-align: center;
+  text-align: left;
+  margin: 0 auto;
+  width: 70%;
   color: rgb(21,144,160);
-  padding: 20px;
+  padding: 20px 0;
+  font-size: 50px;
+}
+
+.content-title-info {
+  text-align: center;
+  margin: 0 auto;
+  width: 70%;
+  color: rgb(0,0,0);
+  padding: 20px 0;
   font-size: 50px;
 }
 
 .content {
-  max-width: 100px;
+  /* width: 100px; */
   margin: 0 auto;
   word-wrap: break-word;
 }
 
 .container {
+  width: 200px;
+}
 
+.container > img {
+  display: inline-block;
 }
 
 /* お客様の声 */
 
 .gray-linebox {
   background: gray;
-  padding-bottom: 30px;
+  padding: 100px 0;
 }
 
 
@@ -52,6 +65,7 @@
 
 .white-linebox {
   background: white;
+  padding: 100px 0;
 }
 
 
